--- a/src/AppBlocks.DataReaders.FileDataReader/AppBlocks.DataReaders.FileDataReader/AppBlocks.DataReaders.FileDataReader.csproj
+++ b/src/AppBlocks.DataReaders.FileDataReader/AppBlocks.DataReaders.FileDataReader/AppBlocks.DataReaders.FileDataReader.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <Version>0.0.1.0</Version>
+    <Version>0.0.2.0</Version>
     <Description>FileDataReader implements IDataReader</Description>
     <Copyright>AppBlocks</Copyright>
     <PackageProjectUrl>https://appblocks.net</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/AppBlocksNET/AppBlocks.DataReaders.FileDataReader</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageReleaseNotes>init</PackageReleaseNotes>
+    <PackageReleaseNotes>more exception handling</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +17,10 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AppBlocks.Models" Version="0.0.17" />
   </ItemGroup>
 
 </Project>
